--- a/index.html
+++ b/index.html
@@ -53,19 +53,18 @@
     </section>
 
     <section class="photo-grid">
-      <image class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="вид из окна поезда"></image>
-      <image class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="горы с облаками"></image>
-      <image class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="волк на сене"></image>
-      <image class="photo-grid__item" src="./images/photo-grid-sochi.jpg" alt="лес в тумане"></image>
-      <image class="photo-grid__item" src="./images/photo-grid-arisa.jpg" alt="колеса на льду"></image>
-      <image class="photo-grid__item" src="./images/photo-grid-baikal.jpg" alt="море с горами"></image>
-      <image class="photo-grid__item" src="./images/photo-grid-elbrus.jpg" alt="горы в снегу"></image>
-      <image class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg" alt="пешеходный переход с камнями">
-      </image>
-      <image class="photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg" alt="равнина в тумане"></image>
-      <image class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="болота с горами"></image>
-      <image class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="рассвет в горах"></image>
-      <image class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="туман с горами"></image>
+      <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="вид из окна поезда">
+      <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="горы с облаками">
+      <img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="волк на сене">
+      <img class="photo-grid__item" src="./images/photo-grid-sochi.jpg" alt="лес в тумане">
+      <img class="photo-grid__item" src="./images/photo-grid-arisa.jpg" alt="колеса на льду">
+      <img class="photo-grid__item" src="./images/photo-grid-baikal.jpg" alt="море с горами">
+      <img class="photo-grid__item" src="./images/photo-grid-elbrus.jpg" alt="горы в снегу">
+      <img class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg" alt="пешеходный переход с камнями">
+      <img class="photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg" alt="равнина в тумане">
+      <img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="болота с горами">
+      <img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="рассвет в горах">
+      <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="туман с горами">
     </section>
 
     <section class="places">
@@ -76,7 +75,7 @@
           <p class="place__url-heading">URL</p>
           <a class="place__link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
         </div>
-        <image class="place__image" src="./images/place-kosa.jpg" alt="куршская коса"></image>
+        <img class="place__image" src="./images/place-kosa.jpg" alt="куршская коса">
         <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта —
           спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная
           природная зона на краю российского анклава.</p>
@@ -94,7 +93,7 @@
           <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
             target="_blank">National Geographic</a>
         </div>
-        <image class="place__image" src="./images/place-kolsky.jpg" alt="кольский"></image>
+        <img class="place__image" src="./images/place-kolsky.jpg" alt="кольский">
         <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на
           юг
           —
@@ -113,7 +112,7 @@
           <p class="place__url-heading">URL</p>
           <a class="place__link" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ" target="_blank">YouTube</a>
         </div>
-        <image class="place__image" src="./images/place-altai.jpg" alt="алтай"></image>
+        <img class="place__image" src="./images/place-altai.jpg" alt="алтай">
         <p class="place__paragraph">Алтай — одно из красивейших мест в России.
           В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и
           озёра.
@@ -131,7 +130,7 @@
           <p class="place__url-heading">URL</p>
           <a class="place__link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
         </div>
-        <image class="place__image" src="./images/place-winter-baikal.jpg" alt="зимний байкал"></image>
+        <img class="place__image" src="./images/place-winter-baikal.jpg" alt="зимний байкал">
         <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро
           в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.
         </p>
@@ -147,7 +146,7 @@
           <p class="place__url-heading">URL</p>
           <a class="place__link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
         </div>
-        <image class="place__image" src="./images/place-karelia.jpg" alt="карелия"></image>
+        <img class="place__image" src="./images/place-karelia.jpg" alt="карелия">
         <p class="place__paragraph" id="last-paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу
           сибирская лиственница
           не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков
