--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
   <header class="header">
     <img class="header__link" src="./images/header-logo.svg" alt="Россия">
-    <div class="header__lang-link">
-      <p class="header__lang-link_ru">Ru</p>
-      <p class="header__lang-link_en">En</p>
+    <div class="header__lang-links">
+      <p class="header__lang-link">Ru</p>
+      <p class="header__lang-link">En</p>
     </div>
   </header>
 
