--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <meta name="description" content="Проект адаптивная верстка Быков Алексей на Яндекс Практикуме">
   <meta name="keywords" content="html, css, russian-travel">
   <meta name="author" content="Быков Алексей">
-  <link rel="stylesheet" href="./vendor/fonts/fonts.css">
   <link rel="stylesheet" href="./pages/index.css">
   <title>Путешествия по России</title>
 </head>
@@ -17,8 +16,8 @@
   <header class="header">
     <img class="header__link" src="./images/header-logo.svg" alt="Россия">
     <div class="header__lang-links">
-      <p class="header__lang-link">Ru</p>
-      <p class="header__lang-link">En</p>
+      <a class="header__lang-link" href="#">Ru</a>
+      <a class="header__lang-link" href="#">En</a>
     </div>
   </header>
 
@@ -28,28 +27,29 @@
       <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
       <img class="lead__image" src="./images/lead-polka.jpg" alt="Карта путешествия по России">
       <p class="lead__caption">ваша полка — верхняя</p>
-      <div class="intro">
-        <h2 class="intro__title">Чего мы там не видели?</h2>
-        <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
-          провести
-          отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с
-          ласковым
-          морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без
-          миллионов
-          на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама,
-          которая
-          взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы
-          выбрали
-          и
-          описали некоторые интересные места, достойные вашего отпуска.</p>
-        <ul class="intro__list">
-          <li>Часовых поясов 11</li>
-          <li>Объектов природного наследия ЮНЕСКО 12</li>
-          <li>Объектов культурного наследия ЮНЕСКО 16</li>
-          <li>Природных заповедников 105</li>
-          <li>Аэропортов 241</li>
-        </ul>
-      </div>
+    </section>
+
+    <section class="intro">
+      <h2 class="intro__title">Чего мы там не видели?</h2>
+      <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
+        провести
+        отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с
+        ласковым
+        морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без
+        миллионов
+        на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама,
+        которая
+        взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы
+        выбрали
+        и
+        описали некоторые интересные места, достойные вашего отпуска.</p>
+      <ul class="intro__list">
+        <li>Часовых поясов 11</li>
+        <li>Объектов природного наследия ЮНЕСКО 12</li>
+        <li>Объектов культурного наследия ЮНЕСКО 16</li>
+        <li>Природных заповедников 105</li>
+        <li>Аэропортов 241</li>
+      </ul>
     </section>
 
     <section class="photo-grid">
@@ -159,13 +159,14 @@
     </section>
 
     <section class="cover">
-      <h2 class="cover__title">До Байкала «на собаках»</h2>
-      <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.
-      </p>
-      <div class="cover__overlay">
-        <div class="cover__background"></div>
-      </div>
+      <a class="cover__overlay" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
+        <h2 class="cover__title">До Байкала «на собаках»</h2>
+        <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
+          электричках.
+        </p>
+      </a>
     </section>
+
   </main>
 
   <footer class="footer">
