--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <header class="header">
     <img class="header__logo" src="./images/header-logo.svg" alt="Россия">
     <div class="header__lang-links">
-      <a class="header__lang-link header__link_active" href="#">Ru</a>
+      <a class="header__lang-link header__lang-link_active" href="#">Ru</a>
       <a class="header__lang-link" href="#">En</a>
     </div>
   </header>
